// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders Chip type correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag tag chip tagColorGrey"
  />
</DocumentFragment>
`;

exports[`Tag renders ColorBlue correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag tag tagColorBlue"
  />
</DocumentFragment>
`;

exports[`Tag renders ColorGreen correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag tag tagColorGreen"
  />
</DocumentFragment>
`;

exports[`Tag renders ColorMagenta correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag tag tagColorMagenta"
  />
</DocumentFragment>
`;

exports[`Tag renders ColorPurple correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag tag tagColorPurple"
  />
</DocumentFragment>
`;

exports[`Tag renders ColorRed correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag tag tagColorRed"
  />
</DocumentFragment>
`;

exports[`Tag renders ColorTeal correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag tag tagColorTeal"
  />
</DocumentFragment>
`;

exports[`Tag renders ColorYellow correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag tag tagColorYellow"
  />
</DocumentFragment>
`;

exports[`Tag renders CustomColor correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag mia-platform-tag-has-color tag"
    style="background-color: brown;"
  />
</DocumentFragment>
`;

exports[`Tag renders WithIcon correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag tag tagColorGrey"
  >
    <svg
      color="currentColor"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: currentColor;"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M201.54,54.46A104,104,0,0,0,54.46,201.54,104,104,0,0,0,201.54,54.46ZM184,195.87a87.16,87.16,0,0,1-16,10.5V99.31l16-16Zm-80-32.56,16-16v68.28a88.37,88.37,0,0,1-16-3ZM88,206.37a87,87,0,0,1-16.3-10.76L88,179.31Zm48-75.06,16-16v97.32a88.37,88.37,0,0,1-16,3ZM40,128A88,88,0,0,1,184.3,60.39L60.38,184.31A87.34,87.34,0,0,1,40,128Zm160,50.59V77.41a88,88,0,0,1,0,101.18Z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly 1`] = `
<DocumentFragment>
  <span
    class="mia-platform-tag mia-platform-tag-has-color tag"
    style="background-color: rgb(255, 0, 0);"
  >
    Tag text
    <span
      aria-label="close"
      class="anticon anticon-close mia-platform-tag-close-icon"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="close"
        fill="currentColor"
        fill-rule="evenodd"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
        />
      </svg>
    </span>
  </span>
</DocumentFragment>
`;
